Fix dark mode flicker

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -17,7 +17,6 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  @apply bg-gray-200;
   height: 100vh;
 }
 
@@ -40,8 +39,4 @@ html {
   ::-webkit-scrollbar-thumb:hover {
     @apply bg-gray-400;
   }
-}
-
-html.dark {
-  @apply bg-g-dark-900;
 }
